[gd_scene load_steps=5 format=2]

[ext_resource path="res://Arena/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Lora/Lora-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -207.021
margin_top = 287.759
margin_right = -46.0205
margin_bottom = 367.759
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.658824 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -64.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="TurnPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -41.5
margin_right = 153.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 2 )
text = "Your Turn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
